--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,13 @@ a:after {
 
 body {
   background-image: url(background.png);
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  overflow-x: hidden;
 }
 
 .smnews {
@@ -55,14 +62,14 @@ img {
   position: relative;
   left: 85%;
   position: absolute;
-  top: 3.7%;
+  top: 3.5%;
 }
 
 .home {
   position: relative;
-  right: 18%;
+  left: 78%;
   position: absolute;
-  top: 3.7%;
+  top: 3.5%;
 }
 
 .article2 {
@@ -97,14 +104,3 @@ a:hover {
   color: gray;
 }
 
-
-.menubar {
-  max-width: 3000px;
-  height: 11%;
-  opacity: 0.5;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: black;
-}
