--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,29 @@
 .text {
-  color: white;
+  color: black;
   font-family: "Chivo", sans-serif;
 }
 
 a:link {
-  color: white;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
-  color: white;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:after {
-  color: white;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
 
 body {
-  background-image: url(background.png);
+  /*background-image: url(background.png);*/
+  background-color: white;
   background-size: cover;
   width: 100%;
   height: 100vh;
@@ -38,12 +39,12 @@ body {
 }
 
 .topmenu {
-  font-family: "Chivo", sans-serif;
+  font-family: 'Libre Baskerville', serif;
 }
 
 .article {
   font-family: "Roboto", sans-serif;
-  color: white;
+  color: black;
 }
 
 .article1 {
@@ -67,7 +68,7 @@ img {
 
 .home {
   position: relative;
-  left: 78%;
+  left: 75%;
   position: absolute;
   top: 3.5%;
 }
@@ -83,24 +84,28 @@ img {
 }
 
 .article3 {
-  position: relative;
+  position: absolute;
   left: 50%;
-  bottom: 1355px;
+  top: 8%;
 }
 
 .video1 {
+  display: inline-block;
   position: relative;
-  left: 50%;
-  bottom: 1355px;
+  left: 2%;
 }
 
 .video2 {
   position: relative;
   left: 50%;
-  bottom: 1320px;
+
 }
 
 a:hover {
   color: gray;
 }
 
+.article4 {
+  position: relative;
+  left: 2%;
+}
