--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ img {
 }
 
 .thirteen {
+  display: inline-block;
   position: relative;
   left: 85%;
   position: absolute;
@@ -69,6 +70,7 @@ img {
 }
 
 .home {
+  display: inline-block;
   position: relative;
   left: 75%;
   position: absolute;
@@ -79,7 +81,7 @@ img {
   display: inline-block;
   margin:0;
   position: relative;
-  left: 20%;
+  left: 6%;
   top: 0;
 }
 
@@ -112,7 +114,7 @@ a:hover {
 .article4 {
   display: inline-block;
   position: relative;
-  left: 25%;
+  left: 6%;
   top: 0;
 }
 
@@ -126,7 +128,7 @@ a:hover {
 .article6 {
   display: inline-block;
   position: relative;
-  left: 6%;
+  left: 15%;
 }
 
 
@@ -160,4 +162,10 @@ footer > svg.instagram{
   position: relative;
   left: 6%;
   top: 0;
+}
+
+.article9{
+  display: inline-block;
+  position: relative;
+  left: 21%;
 }
