--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,10 @@ body {
 .smnews {
   display: inline-block;
   position: relative;
-  left: 6%;
+  left: 10%;
+  padding: 0;
+  position: absolute;
+  top: 3.5%;
 }
 
 .topmenu {
@@ -44,6 +47,7 @@ body {
 }
 
 .article {
+  
   font-family: "Roboto", sans-serif;
   color: black;
 }
@@ -51,7 +55,7 @@ body {
 .article1 {
   display: inline-block;
   position: relative;
-  left: 6%;
+  left: 17%;
   top: 0;
 }
 
@@ -155,7 +159,7 @@ footer > svg.instagram{
 .article7{
   display: inline-block;
   position: relative;
-  left: 21%;
+  left: 6%;
 }
 .article8{
   display: inline-block;
@@ -165,6 +169,19 @@ footer > svg.instagram{
 }
 
 .article9{
+  display: inline-block;
+  position: relative;
+  left: 21%;
+}
+
+.logo{
+  display: inline-block;
+  position: relative;
+  width: 150px;
+  height: 100px;
+}
+
+.article10{
   display: inline-block;
   position: relative;
   left: 21%;
