--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ img {
 
 .article2 {
   display: inline-block;
-  margin:0;
+  margin: 0;
   position: relative;
   left: 21%;
   top: 0;
@@ -129,7 +129,6 @@ a:hover {
   display: inline-block;
   position: relative;
   left: 6%;
-
 }
 
 .article6 {
@@ -138,59 +137,76 @@ a:hover {
   left: 6%;
 }
 
-
-footer{
+footer {
   width: 100vw;
   height: 10vw;
   background-color: gray;
 }
 
-footer > svg.youtube{
+footer > svg.youtube {
   width: 5%;
   position: relative;
   top: 27%;
   margin: 10px;
 }
 
-footer > svg.instagram{
+footer > svg.instagram {
   width: 4%;
   position: relative;
   top: 23%;
   margin: 10px;
 }
 
-.article7{
+.article7 {
   display: inline-block;
   position: relative;
   left: 6%;
-  
 }
-.article8{
+.article8 {
   display: inline-block;
   position: relative;
   left: 6%;
   top: 0;
 }
 
-.article9{
+.article9 {
   display: inline-block;
   position: relative;
   left: 21%;
   padding-right: 220px;
 }
 
-.logo{
+.logo {
   display: inline-block;
   position: relative;
   width: 150px;
   height: 100px;
 }
 
-.article10{
+.article10 {
   display: inline-block;
   position: relative;
   left: 19%;
   padding-right: 220px;
   margin-right: 50px;
   margin-left: 0px;
+}
+
+.recents13 {
+  width: 200px;
+  height: 100px;
+}
+
+.recents1 {
+  display: inline-block;
+  position: relative;
+  left: 5%;
+}
+
+.line {
+  width: 100vw;
+  height: 5px;
+  background-color: black;
+  padding: 0;
+  margin: 0;
 }
