--- a/styles.css
+++ b/styles.css
@@ -222,3 +222,12 @@ footer > svg.instagram {
   margin-right: 50px;
   margin-left: 0px;
 }
+
+.article14{
+  display: inline-block;
+  position: relative;
+  left: 17%;
+  padding-right: 220px;
+  margin-right: 50px;
+  margin-left: 0px;
+}
