--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ img {
   display: inline-block;
   margin: 0;
   position: relative;
-  left: 16%;
+  left: 6%;
   top: 0;
 }
 
@@ -163,19 +163,20 @@ footer > svg.instagram {
 .article7 {
   display: inline-block;
   position: relative;
-  left: 5%;
+  left: 8%;
 }
 .article8 {
   display: inline-block;
   position: relative;
   left: 6%;
   top: 0;
+  
 }
 
 .article9 {
   display: inline-block;
   position: relative;
-  left: 17%;
+  left: 6%;
   padding-right: 220px;
 }
 
@@ -226,8 +227,43 @@ footer > svg.instagram {
 .article14{
   display: inline-block;
   position: relative;
-  left: 17%;
+  left: 6%;
   padding-right: 220px;
   margin-right: 50px;
   margin-left: 0px;
+}
+
+.article15{
+  display: inline-block;
+  position: relative;
+  left: 18%;
+  padding-right: 220px;
+  margin-right: 50px;
+  margin-left: 0px;
+}
+
+
+.article16{
+  display: inline-block;
+  position: relative;
+  left: 6%;
+  padding-right: 220px;
+  margin-right: 50px;
+  margin-left: 0px;
+}
+
+
+.article17{
+  display: inline-block;
+  position: relative;
+  left: 3%;
+  padding-right: 220px;
+  margin-right: 50px;
+  margin-left: 0px;
+}
+
+.article18{
+  display: inline-block;
+  position: relative;
+  left: 18%;
 }
