--- a/styles.css
+++ b/styles.css
@@ -219,7 +219,8 @@ footer > svg.instagram {
   display: inline-block;
   position: relative;
   left: 21%;
-  padding-right: 220px;
+  padding-right: 400px;
+  padding-bottom: 20px;
   margin-right: 50px;
   margin-left: 0px;
 }
@@ -279,3 +280,5 @@ footer > svg.instagram {
   left: 0%;
   top: 0;
 }
+
+
