--- a/styles.css
+++ b/styles.css
@@ -219,7 +219,7 @@ footer > svg.instagram {
   display: inline-block;
   position: relative;
   left: 21%;
-  padding-right: 400px;
+  padding-right: 220px;
   padding-bottom: 20px;
   margin-right: 50px;
   margin-left: 0px;
@@ -281,4 +281,8 @@ footer > svg.instagram {
   top: 0;
 }
 
-
+.articlenames{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  position: relative;
+  left: 6%;
+}
