--- a/styles.css
+++ b/styles.css
@@ -286,3 +286,22 @@ footer > svg.instagram {
   position: relative;
   left: 6%;
 }
+
+.mainheader{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.thanks{
+  display: inline-block;
+  position: relative;
+  left: 6%;
+  color: black;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.rightarticle{
+  display: inline-block;
+  position: relative;
+  left: 10%;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
