--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,6 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
-  overflow-x: hidden;
   overflow-y: overlay;
 }
 
@@ -304,4 +303,12 @@ footer > svg.instagram {
   position: relative;
   left: 10%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.toparticle {
+  display: inline-block;
+  position: relative;
+  left: 0%;
+  top: 0;
+  
 }
