--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,7 @@ footer > svg.instagram {
   display: inline-block;
   position: relative;
   left: 5%;
+  padding-right: 50px;
 }
 
 .line {
@@ -315,5 +316,5 @@ footer > svg.instagram {
 
 .googleform2{
   position: relative;
-  
+
 }
