--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,6 @@ footer > svg.instagram {
   position: relative;
   left: 6%;
   top: 0;
-  
 }
 
 .article9 {
@@ -215,7 +214,7 @@ footer > svg.instagram {
   margin: 0;
 }
 
-.article12{
+.article12 {
   display: inline-block;
   position: relative;
   left: 21%;
@@ -225,7 +224,7 @@ footer > svg.instagram {
   margin-left: 0px;
 }
 
-.article14{
+.article14 {
   display: inline-block;
   position: relative;
   left: 6%;
@@ -234,7 +233,7 @@ footer > svg.instagram {
   margin-left: 0px;
 }
 
-.article15{
+.article15 {
   display: inline-block;
   position: relative;
   left: 18%;
@@ -243,8 +242,7 @@ footer > svg.instagram {
   margin-left: 0px;
 }
 
-
-.article16{
+.article16 {
   display: inline-block;
   position: relative;
   left: 6%;
@@ -253,8 +251,7 @@ footer > svg.instagram {
   margin-left: 0px;
 }
 
-
-.article17{
+.article17 {
   display: inline-block;
   position: relative;
   left: 3%;
@@ -263,7 +260,7 @@ footer > svg.instagram {
   margin-left: 0px;
 }
 
-.article18{
+.article18 {
   display: inline-block;
   position: relative;
   left: 6%;
@@ -274,36 +271,40 @@ footer > svg.instagram {
   left: 15%;
 }
 
-.article20{
+.article20 {
   display: inline-block;
   position: relative;
   left: 0%;
   top: 0;
 }
 
-.articlenames{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.articlenames {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   position: relative;
   left: 6%;
 }
 
-.mainheader{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.mainheader {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.thanks{
+.thanks {
   display: inline-block;
   position: relative;
   left: 6%;
   color: black;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.rightarticle{
+.rightarticle {
   display: inline-block;
   position: relative;
   left: 10%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .toparticle {
@@ -311,19 +312,15 @@ footer > svg.instagram {
   position: relative;
   left: 0%;
   top: 0;
-  
 }
 
-.googleform2{
+.googleform2 {
   position: relative;
-
 }
-
 
 #yuckpic {
   display: none;
 }
-
 
 #showbutton {
   border: none;
@@ -332,3 +329,4 @@ footer > svg.instagram {
   background-color: brown;
   color: white;
 }
+
