--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,13 @@
   white-space: normal;
 }
 
+.pa {
+  display: inline-block;
+  position: relative;
+  left: 85%;
+  position: absolute;
+  top: 3.5%;
+}
 a:link {
   color: black;
   background-color: transparent;
@@ -24,7 +31,7 @@ a:after {
 
 body {
   /*background-image: url(background.png);*/
-  background-color: white;
+  background-color: rgb(231, 231, 231);
   background-size: cover;
   width: 100%;
   height: 100vh;
